[tool.poetry]
name = "zap-autogen-rag-security"
version = "0.2.0" 
description = "AI-Powered ZAP-RAG Security Analysis System"
authors = ["Ayush Mahariya <ayushmahariya123@gmail.com>"]
readme = "README.md"
packages = [{include = "zap_security_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.0.0"
chromadb = "^1.1.0"
requests = "^2.28.0"
openai = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
